export enum AppRoutes {
  dogFacts = 'Dog Facts',
  bookmarks = 'Bookmarks',
}
