...
              <Stack.Screen
                name={AppRoutes.catFacts}
                component={Facts}
                options={({ navigation }) => ({
                  headerRight: () => (
                    <IconButton
                      testID="bookmarks-button"
                      icon="lightbulb-multiple"
                      onPress={() => navigation.navigate(AppRoutes.bookmarks)}
                    />
                  ),
                })}
              />
...
